--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -29,5 +31,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://shine-energy.netlify.com/.netlify/functions/meter-readings"
+  "proxy": "https://shine-energy.netlify.com/.netlify/functions/meter-readings",
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  },
+  "homepage": "http://vincentkman.github.io/react-gh-pages"
 }
