--- a/package.json
+++ b/package.json
@@ -35,5 +35,5 @@
   "devDependencies": {
     "gh-pages": "^2.0.1"
   },
-  "homepage": "http://vincentkman.github.io/react-gh-pages"
+  "homepage": "http://vincentkman.github.io/shine-energy"
 }
